--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
             sizes="32x32"
             href="./images/favicon-32x32.png"
         />
-
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap"
+            rel="stylesheet"
+        />
         <title>Frontend Mentor | Interactive pricing component</title>
         <script src="/src/app.js" defer></script>
         <link rel="stylesheet" href="/dist/main.css" />
@@ -22,13 +27,16 @@
         discount Unlimited websites 100% data ownership Email reports Start my
         trial
 
-        <div class="attribution">
-            Challenge by
-            <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
-        </div>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by
+                <a href="https://github.com/marcinsuski">Marcin Suski</a>.
+            </div>
+        </footer>
     </body>
 </html>
